--- a/package.json
+++ b/package.json
@@ -15,15 +15,18 @@
     "@react-navigation/bottom-tabs": "^7.3.10",
     "@react-navigation/elements": "^2.6.3",
     "@react-navigation/native": "^7.1.6",
+    "@shopify/flash-list": "2.0.2",
     "@tanstack/react-query": "^5.90.16",
     "axios": "^1.13.2",
     "expo": "~54.0.30",
+    "expo-blur": "~15.0.8",
     "expo-constants": "~18.0.12",
     "expo-file-system": "~19.0.21",
     "expo-font": "~14.0.10",
     "expo-haptics": "~15.0.8",
     "expo-image": "~3.0.11",
     "expo-image-picker": "~17.0.10",
+    "expo-linear-gradient": "~15.0.8",
     "expo-linking": "~8.0.11",
     "expo-router": "~6.0.21",
     "expo-secure-store": "~15.0.8",
@@ -50,7 +53,7 @@
     "zustand": "^5.0.9"
   },
   "devDependencies": {
-    "@types/react": "~19.0.10",
+    "@types/react": "^19.2.7",
     "@types/react-native-vector-icons": "^6.4.18",
     "eslint": "^9.25.0",
     "eslint-config-expo": "~9.2.0",
