--- a/package.json
+++ b/package.json
@@ -18,9 +18,9 @@
     "@shopify/flash-list": "2.0.2",
     "@tanstack/react-query": "^5.90.16",
     "axios": "^1.13.2",
-    "expo": "~54.0.30",
+    "expo": "~54.0.31",
     "expo-blur": "~15.0.8",
-    "expo-constants": "~18.0.12",
+    "expo-constants": "~18.0.13",
     "expo-file-system": "~19.0.21",
     "expo-font": "~14.0.10",
     "expo-haptics": "~15.0.8",
@@ -55,13 +55,13 @@
     "zustand": "^5.0.9"
   },
   "devDependencies": {
-    "@types/react": "^19.2.7",
+    "@types/react": "~19.1.10",
     "@types/react-native-vector-icons": "^6.4.18",
     "eslint": "^9.25.0",
-    "eslint-config-expo": "~9.2.0",
+    "eslint-config-expo": "~10.0.0",
     "expo-module-scripts": "^5.0.8",
     "tailwindcss": "^3.4.19",
-    "typescript": "~5.8.3"
+    "typescript": "~5.9.2"
   },
   "private": true
 }
