--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   },
   "dependencies": {
     "@expo/vector-icons": "^15.0.3",
+    "@react-native-async-storage/async-storage": "^1.24.0",
     "@react-navigation/bottom-tabs": "^7.3.10",
     "@react-navigation/elements": "^2.6.3",
     "@react-navigation/native": "^7.1.6",
@@ -20,6 +21,7 @@
     "axios": "^1.13.2",
     "expo": "~54.0.31",
     "expo-blur": "~15.0.8",
+    "expo-build-properties": "^1.0.10",
     "expo-constants": "~18.0.13",
     "expo-file-system": "~19.0.21",
     "expo-font": "~14.0.10",
@@ -37,6 +39,7 @@
     "expo-symbols": "~1.0.8",
     "expo-system-ui": "~6.0.9",
     "expo-web-browser": "~15.0.10",
+    "firebase": "^11.10.0",
     "formik": "^2.4.9",
     "nativewind": "^4.2.1",
     "react": "19.1.0",
@@ -55,6 +58,7 @@
     "zustand": "^5.0.9"
   },
   "devDependencies": {
+    "@types/firebase": "^2.4.32",
     "@types/react": "~19.1.10",
     "@types/react-native-vector-icons": "^6.4.18",
     "eslint": "^9.25.0",
